# zupm

./: .gitignore  CMakeLists.txt  Dockerfile  Kbuild  Kconfig  Makefile  README.md  add_mraa_upm_to_zephyr-1.6.0-rc3.patch  add_mraa_upm_to_zephyr-v1.6.0.patch  add_upm_mraa.patch  docker-compose.yaml  es08a.c  es08a.h  install.patch  main_prog.c  upm.h  upm_servo.h  upm_test_lib.c  upm_utilities.h  zupm_2_zephyr.patch  ~$README.md
backup/: README.md  main_prog.c  upm_servo.h
backup/upm_c_es08a/: es08a.c  es08a.h~
backup/upm_c_es9257/: es9257.h
examples/c/: CMakeLists.txt
examples/c++/: CMakeLists.txt
examples/java/: CMakeLists.txt
include/: upm.h  upm_fti.h  upm_heart_rate.h  upm_math.h  upm_platform.h  upm_sensor_ph.h  upm_sensor_touch.h  upm_servo.h  upm_temperature.h  upm_types.h  upm_utilities.c  upm_utilities.h  upm_utilities.h~
include/types/: upm_acceleration.h  upm_angle.h  upm_audio.h  upm_distance.h  upm_heart_rate.h  upm_ph.h  upm_potentiometer.h  upm_sensor.h  upm_servo.h  upm_stream.h  upm_switch.h  upm_temperature.h  upm_touch.h  upm_vibration.h  upm_voltage.h
samples/: index.json  upm.samples.json
samples/upm/: index.json
src/: CMakeLists.txt  javaswig_blacklist  pythonswig_blacklist
src/a110x/: CMakeLists.txt  Kbuild  Kconfig  Makefile  a110x.c  a110x.h  a110x_fti.c
src/ad8232/: CMakeLists.txt  Kbuild  Kconfig  Makefile  ad8232.c  ad8232.h  ad8232.h~  ad8232_fti.c
src/apa102/: Kbuild  Kconfig  Makefile  apa102.h
src/bh1750/: CMakeLists.txt  Kbuild  (+5 more)
upm_c_es08a/: es08a.c~  es08a.h
upm_c_es9257/: CMakeLists.txt  es9257.c~
(+802 files in other folders)
